Fixing Alignment
padding-left +10px

--- a/main.css
+++ b/main.css
@@ -44,6 +44,6 @@ h2 {
 }
 
 .main {
-	padding-left: 40px;
+	padding-left: 50px;
 	min-width: 75%;
 }
